TokenList-based mechanism tested and fixed. May still be buggy in some parts